--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 
 <head>
 
-<title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+
 
 <%= csrf_meta_tags %>
 
@@ -14,11 +14,47 @@
 
 <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
+<!--[if lt IE 9]>
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+
+</script>
+
+<![endif]-->
+
 </head>
 
 <body>
 
+<header class="navbar navbar-fixed-top navbar-inverse">
+
+<div class="container">
+
+<%= link_to "sample app", '#', id: "logo" %>
+
+<nav>
+
+<ul class="nav navbar-nav navbar-right">
+
+<li><%= link_to "Home", '/' %></li>
+
+<li><%= link_to "Help", '/help' %></li>
+
+<li><%= link_to "Log in", '/Login' %></li>
+
+</ul>
+
+</nav>
+
+</div>
+
+</header>
+<%= render 'layouts/footer' %>
+<div class="container">
+
 <%= yield %>
+
+</div>
 
 </body>
 
